--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,28 +3,32 @@
     "build": {
         "dockerfile": "Dockerfile",
         "args": {
-            "VARIANT": "3.10-bullseye"
-        }
-    },
-    "features": {
-        "ghcr.io/devcontainers/features/docker-from-docker:1": {
-            "version": "20.10"
-        },
-        "ghcr.io/devcontainers/features/node:1": {
-            "version": "16",
-            "nodeGypDependencies": false
+            "VARIANT": "3.11-bullseye"
         }
     },
     "customizations": {
         "vscode": {
             "extensions": [
-                "ms-azuretools.azure-dev",
                 "ms-azuretools.vscode-bicep",
-                "ms-azuretools.vscode-docker",
-                "ms-vscode.vscode-node-azure-pack",
-                "ms-python.python",
-                "ms-azuretools.vscode-azurefunctions"
-            ]
+                "ms-python.python"
+            ],
+            "python.defaultInterpreterPath": "/usr/local/bin/python",
+            "python.linting.enabled": true,
+            "python.testing.pytestEnabled": true,
+            "python.testing.unittestEnabled": false,
+            "[python]": {
+                "editor.formatOnSave": true,
+                "editor.codeActionsOnSave": {
+                    "source.fixAll": true
+                },
+                "editor.defaultFormatter": "ms-python.black-formatter"
+            },
+            "python.formatting.provider": "black",
+            "files.exclude": {
+                "**/*.coverage": true,
+                ".ruff_cache": true,
+                ".pytest_cache": true
+            }
         }
     },
     "forwardPorts": [
@@ -32,9 +36,5 @@
         7071
     ],
     "postCreateCommand": "pip3 install --user -r requirements.txt",
-
-    "remoteUser": "vscode",
-    "hostRequirements": {
-        "memory": "8gb"
-    }
+    "remoteUser": "vscode"
 }
