Fix dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,25 +9,27 @@
     "customizations": {
         "vscode": {
             "extensions": [
+                "ms-vscode.vscode-node-azure-pack",
                 "ms-azuretools.vscode-bicep",
-                "ms-python.python"
+                "ms-python.python",
+                "ms-python.black-formatter"
             ],
-            "python.defaultInterpreterPath": "/usr/local/bin/python",
-            "python.linting.enabled": true,
-            "python.testing.pytestEnabled": true,
-            "python.testing.unittestEnabled": false,
-            "[python]": {
-                "editor.formatOnSave": true,
-                "editor.codeActionsOnSave": {
-                    "source.fixAll": true
+            "settings": {
+                "python.defaultInterpreterPath": "/usr/local/bin/python",
+                "python.linting.enabled": true,
+                "[python]": {
+                    "editor.formatOnSave": true,
+                    "editor.codeActionsOnSave": {
+                        "source.fixAll": true
+                    },
+                    "editor.defaultFormatter": "ms-python.black-formatter"
                 },
-                "editor.defaultFormatter": "ms-python.black-formatter"
-            },
-            "python.formatting.provider": "black",
-            "files.exclude": {
-                "**/*.coverage": true,
-                ".ruff_cache": true,
-                ".pytest_cache": true
+                "python.formatting.provider": "black",
+                "files.exclude": {
+                    "**/*.coverage": true,
+                    ".ruff_cache": true,
+                    ".pytest_cache": true
+                }
             }
         }
     },
