--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 [tool.pytest.ini_options]
-addopts = "-ra --cov api --cov-report term --cov-report xml:cov.xml"
+addopts = "-ra --cov api --cov-report term --cov-report xml:cov.xml --showlocals"
 testpaths = ["tests"]
 pythonpath = ['.']
